Improved handling of wrapped event, with better detection of non-existent path